Project img animation small fix & multipageform img update

--- a/styles.css
+++ b/styles.css
@@ -529,6 +529,10 @@ About
   height: 100vh;
 }
 
+#about .container {
+  padding: 0;
+}
+
 .about-info {
   margin: auto;
   /* text-align: center; */
@@ -539,7 +543,7 @@ About
 .my-text {
   margin: auto;
   font-size: 1.1rem;
-  padding: 1rem;
+  /* padding: 1rem; */
   display: grid;
   place-items: center;
   text-align: center;
@@ -842,8 +846,10 @@ Projects
   flex-shrink: 0;
   width: 100%;
   height: 100%;
+  position: relative;
+  transform: translate(2rem, -2rem);
   opacity: 0;
-  transition: 1.2s all;
+  transition: .5s all;
   object-fit: contain;
 }
 
@@ -855,15 +861,14 @@ Projects
   width: 100%;
   height: 100%;
   fill: transparent;
-
 }
 
 .project-img svg rect {
   stroke: #000;
   stroke-width: 4;
-  transition: 3s linear;
-  stroke-dasharray: 3100;
-  stroke-dashoffset: 3100;
+  transition: 3s ease;
+  stroke-dasharray: 3300;
+  stroke-dashoffset: 3300;
 }
 
 .description {
@@ -2136,11 +2141,11 @@ footer p {
   }
 
   .my-text h2 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 
   #projects {
-    padding: 5rem 12rem;
+    padding: 5rem 5rem;
   }
 
   .project-img {
